--- a/Assets/Yodo1SDK/Editor/AndroidAPI/GradleTemplate/AndroidManifest.xml
+++ b/Assets/Yodo1SDK/Editor/AndroidAPI/GradleTemplate/AndroidManifest.xml
@@ -10,6 +10,7 @@
             android:normalScreens="true"
             android:smallScreens="true"
             android:xlargeScreens="true"/>
+
     <!--sign_replace_permission-->
     <application
             android:name="com.yodo1.android.sdk.Yodo1Application"
@@ -25,6 +26,40 @@
             android:supportsPictureInPicture="true"
             android:theme="@style/UnityThemeSelector"
             android:usesCleartextTraffic="true">
+
+        <activity
+                android:name="com.yodo1.plugin.u3d.Yodo1UnityActivity"
+                android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale|layoutDirection|density"
+                android:hardwareAccelerated="false"
+                android:label="@string/app_name"
+                android:launchMode="singleTask"
+                android:screenOrientation="fullSensor">
+            <!-- YODO1 SDK(Do not use PA System -->
+            <!--sign_replace_intent-->
+            <meta-data
+                    android:name="unityplayer.UnityActivity"
+                    android:value="true"/>
+        </activity>
+
+        <activity android:name="com.yodo1.android.sdk.view.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <meta-data
+                android:name="Yodo1ChannelCode"
+                android:value="Yodo1ChannelCode_value"
+                tools:replace="android:value"/>
+        <meta-data
+                android:name="Yodo1SDKVersion"
+                android:value="Yodo1SDKVersion_value"
+                tools:replace="android:value"/>
+        <meta-data
+                android:name="Yodo1SDKType"
+                android:value="Yodo1SDKtype_value"
+                tools:replace="android:value"/>
 
         <!--sign_replace_activity-->
     </application>
