--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 android:hardwareAccelerated="false"
                 android:label="@string/app_name"
                 android:launchMode="singleTask"
-                android:screenOrientation="sensorPortrait">
+                android:screenOrientation="user">
             <meta-data
                     android:name="unityplayer.UnityActivity"
                     android:value="true"/>
@@ -40,17 +40,14 @@
                 android:name="android.max_aspect"
                 android:value="2.1"/>
 
-        <!--Yodo1App-->
-        <meta-data
-            android:name="com.google.android.gms.games.APP_ID"
-            android:value="" /><!--Yodo1App_end-->
+        <!--Yodo1App--><!--Yodo1App_end-->
         <activity
                 android:name="com.yodo1.android.sdk.view.SplashActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:hardwareAccelerated="true"
                 android:launchMode="singleTop"
                 android:exported="true"
-                android:screenOrientation="sensorPortrait">
+                android:screenOrientation="user">
             <!--Splash--><!--Splash_end-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
