--- a/Assets/Plugins/Android/res/raw/yodo1_games_config.properties
+++ b/Assets/Plugins/Android/res/raw/yodo1_games_config.properties
@@ -1,16 +1,9 @@
 mainClassName=com.yodo1.plugin.u3d.Yodo1UnityActivity
 isshow_yodo1_logo=true
 Yodo1SDKVersion=1.5.0
-game_key=asdf
 yodo1_sdk_mode=offline
 debugEnabled=1
 thisProjectOrient=portrait
-Yodo1SDKType=yodo1_global
-CHANNEL_CODE_PUBLISH=GooglePlay
-CHANNEL_CODE=GooglePlay
-sdk_code=GooglePlay
-share_code=AndroidSystem
+Yodo1SDKType=yodo1_cn
 dmp_key_thinkingdata_appId=
 dmp_key_thinkingdata_url=https://c1.yodo1.com/
-google_publish_key=
-google_app_id=
