--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:hardwareAccelerated="true"
             android:isGame="true"
             android:largeHeap="true"
+            android:theme="@style/GameTheme"
             android:requestLegacyExternalStorage="true"
             android:usesCleartextTraffic="true">
 
@@ -27,7 +28,7 @@
                 android:hardwareAccelerated="false"
                 android:label="@string/app_name"
                 android:launchMode="singleTask"
-                android:screenOrientation="user">
+                android:screenOrientation="sensorPortrait">
             <meta-data
                     android:name="unityplayer.UnityActivity"
                     android:value="true"/>
@@ -47,7 +48,7 @@
                 android:hardwareAccelerated="true"
                 android:launchMode="singleTop"
                 android:exported="true"
-                android:screenOrientation="user">
+                android:screenOrientation="sensorPortrait">
             <!--Splash--><!--Splash_end-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
