--- a/Assets/Yodo1/Suit/Internal/config_Android.properties
+++ b/Assets/Yodo1/Suit/Internal/config_Android.properties
@@ -1,19 +1,24 @@
 #channel
 ChannelList=GooglePlay
-GooglePlay=com.yodo1.suit.pay:google:5.0.0.0
+GooglePlay=com.yodo1.suit.pay:google:5.0.0.1
 #analytics
 AnalyticsList=ThinkingData,Appsflyer,Umeng
-suitCore=com.yodo1.suit.pay:core:6.1.7.1
+suitCore=com.yodo1.suit.pay:core:6.1.10.6
 ThinkingData=
-Appsflyer=com.yodo1.suit.analytics:appsflyer:6.9.2.0
+Appsflyer=com.yodo1.suit.analytics:appsflyer:6.9.2.3
 Umeng=com.yodo1.suit.analytics:umeng-google:9.5.2.0
 FireBase=com.yodo1.suit.analytics:firbase:20.0.3
 #analytics config
 ThinkingData_config=dmp_key_thinkingdata_appId,dmp_key_thinkingdata_url
-Appsflyer_config=appsflyer_dev_key,deeplink_uriSchema,deeplink_uriHost,deeplink_urlSchema,deeplink_urlHost,deeplink_urlPath
+Appsflyer_config=af_dev_key,uriSchema,uriHost,urlHost,af_templateId
 Umeng_config=UMENG_APPKEY,UMENG_CHANNEL
 FireBase_config=
 #channel config
 GooglePlay_config=google_publish_key,google_app_id
-#share
-AndroidSystem=com.yodo1.suit.share:system:1.1.1
+#share,Facebook
+ShareList=AndroidSystem
+AndroidSystem=com.yodo1.suit.share:system:1.1.2
+Facebook=com.yodo1.suit.share:facebook:15.0.2.3
+#share config
+Facebook_config=facebook_app_id,facebook_client_token
+AndroidSystem_config=
