--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -28,7 +28,7 @@
                 android:hardwareAccelerated="false"
                 android:label="@string/app_name"
                 android:launchMode="singleTask"
-                android:screenOrientation="sensorPortrait">
+                android:screenOrientation="user">
             <meta-data
                     android:name="unityplayer.UnityActivity"
                     android:value="true"/>
@@ -48,7 +48,7 @@
                 android:hardwareAccelerated="true"
                 android:launchMode="singleTop"
                 android:exported="true"
-                android:screenOrientation="sensorPortrait">
+                android:screenOrientation="user">
             <!--Splash--><!--Splash_end-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
