--- a/Assets/Yodo1/Suit/Plugins/Android/Yodo1Suit.androidlib/res/raw/yodo1_games_config.properties
+++ b/Assets/Yodo1/Suit/Plugins/Android/Yodo1Suit.androidlib/res/raw/yodo1_games_config.properties
@@ -1,16 +1,8 @@
 mainClassName=com.yodo1.plugin.u3d.Yodo1UnityActivity
-isshow_yodo1_logo=false
+isshow_yodo1_logo=true
 Yodo1SDKVersion=6.1.11
-game_key=tyrtyhz
-regionCode=asdfa
+game_key=LFo9FuZSz
 yodo1_sdk_mode=offline
 debugEnabled=1
 thisProjectOrient=portrait
-Yodo1SDKType=yodo1_global
-CHANNEL_CODE_PUBLISH=GooglePlay
-CHANNEL_CODE=GooglePlay
-sdk_code=GooglePlay
-dmp_key_thinkingdata_appId=
-dmp_key_thinkingdata_url=https://c1.yodo1.com/
-google_publish_key=gfasdgasdfgadfg
-google_app_id=sdfasdfas
+Yodo1SDKType=yodo1_cn
