--- a/Assets/Yodo1/Suit/Internal/config_Android.properties
+++ b/Assets/Yodo1/Suit/Internal/config_Android.properties
@@ -1,17 +1,14 @@
 #channel
 ChannelList=GooglePlay
-GooglePlay=com.yodo1.suit.pay:google:17.0.0.12
+GooglePlay=com.yodo1.suit.pay:google:19.0.0.2
 #analytics
-AnalyticsList=ThinkingData,Appsflyer,Adjust
-suitCore=com.yodo1.suit.pay:core:6.3.3.6
+AnalyticsList=ThinkingData,Adjust
+suitCore=com.yodo1.suit.pay:core:6.3.8.6
 ThinkingData=
-Appsflyer=com.yodo1.suit.analytics:appsflyer:6.12.2.0
-FireBase=com.yodo1.suit.analytics:firbase:21.3.0
-Adjust=com.yodo1.suit.analytics:adjust:4.33.5.0
+Adjust=com.yodo1.suit.analytics:adjust:4.38.0.0
 #analytics config
 ThinkingData_config=dmp_key_thinkingdata_appId,dmp_key_thinkingdata_url
-Appsflyer_config=af_dev_key,af_uriSchema,af_uriHost,af_urlHost,af_templateId
 Adjust_config=adjust_app_token,adjust_isSandBox,adjust_uriSchema
-FireBase_config=
+##FireBase_config=
 #channel config
 GooglePlay_config=google_publish_key,google_app_id
