--- a/Assets/Plugins/Android/Yodo1Suit.androidlib/res/raw/yodo1_games_config.properties
+++ b/Assets/Plugins/Android/Yodo1Suit.androidlib/res/raw/yodo1_games_config.properties
@@ -1,9 +1,10 @@
 mainClassName=com.yodo1.plugin.u3d.Yodo1UnityActivity
 isshow_yodo1_logo=false
-Yodo1SDKVersion=6.3.3
+Yodo1SDKVersion=6.3.9
 channelPackageName=com.yodo1.rodeo
 game_key=LFo9FuZSz
 yodo1_sdk_mode=offline
 debugEnabled=1
 thisProjectOrient=portrait
+analytics_code=
 Yodo1SDKType=yodo1_cn
